--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           src="./images/header-image.jpg"
           alt="header-image"
         />
-        <a href="./home-page.html"><img class="logo" src="./images/logo.png" alt="logo"></a>
+        <a href="./"><img class="logo" src="./images/logo.png" alt="logo"></a>
         <h1>E-Stay<br />Make Your Stay Easier</h1>
       </div>
       <div class="search-bar">
@@ -83,7 +83,7 @@
       </aside>
       <div class="accommodation-content">
         <div class="landingpage-info">
-          <img src="./images/pitt st hostel.jpg" alt="" />
+          <img src="./images/Pitt St Hostel.jpg" alt="" />
           <div class="accommodation-content__info">
             <div class="accommodation-content__name">
               <h3>Pitt St Hostel</h3>
@@ -188,7 +188,7 @@
           </div>
         </div>
         <div class="landingpage-info">
-          <img src="./images/star hostel.jpg" alt="" />
+          <img src="./images/Star Hostel.jpg" alt="" />
           <div class="accommodation-content__info">
             <div class="accommodation-content__name">
               <h3>Star Hostel</h3>
@@ -209,7 +209,7 @@
           </div>
         </div>
         <div class="landingpage-info">
-          <img src="./images/skyline hotel.jpg" alt="" />
+          <img src="./images/Skyline Hotel.jpg" alt="" />
           <div class="accommodation-content__info">
             <div class="accommodation-content__name">
               <h3>Skyline Hotel</h3>
